tests/cases/errors/runtime_add_mixed_types.lox
// + accepts (number, number) or (string, string), nothing else.
// expect runtime error: Operands must be two numbers or two strings
print 1 + "x";
